<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblSelectDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/lblSelectDOB"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSelectDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSelectDOB"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lblSelectDOB"
        app:layout_constraintTop_toTopOf="@+id/lblSelectDOB" />

    <TextView
        android:id="@+id/lblAge"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblAge"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.399"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSelectDOB" />

    <TextView
        android:id="@+id/lblminBasicSaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lblminBasicSaving"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAge" />

    <TextView
        android:id="@+id/lblInvestment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lblInvestment"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblminBasicSaving" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/btnOK"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblInvestment" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/btnReset"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnOK"
        app:layout_constraintTop_toTopOf="@+id/btnOK" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAgeAns"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lblAge"
        app:layout_constraintTop_toTopOf="@+id/lblAge" />

    <TextView
        android:id="@+id/txtMinBasicSaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMinBasicSaving"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lblminBasicSaving"
        app:layout_constraintTop_toTopOf="@+id/lblminBasicSaving" />

    <TextView
        android:id="@+id/txtInvestment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInvestment"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lblInvestment"
        app:layout_constraintTop_toTopOf="@+id/lblInvestment" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="cursive"
        android:text="@string/titleEPF"
        android:textColor="#690279"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/title"
        android:textColor="#3D014B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>